--- a/slides.tex
+++ b/slides.tex
@@ -1,5 +1,5 @@
-%\documentclass[english,handout, aspectratio=169,10pt]{beamer} % slides for students
-\documentclass[english,aspectratio=169,10pt]{beamer} % slides for the lectures
+\documentclass[english,handout, aspectratio=169,10pt]{beamer} % slides for students
+%\documentclass[english,aspectratio=169,10pt]{beamer} % slides for the lectures
 %===================================================================
 % Beamer theme and its fine tune
 %===================================================================
@@ -253,8 +253,9 @@ NO F 61}
 %
 %\input{lecture-1-introduction}
 %\input{lecture-2-chemical-equilibrium}
-\input{lecture-3-thermodynamic-model}
+%\input{lecture-3-thermodynamic-model}
 %\input{lecture-4-numerical-method-equilibrium}
+\input{lecture-computational-project}
 %project descriptions
 %\input{lecture-5-chemical-kinetics}
 %\input{lecture-6-reactive-transport}
