--- a/lecture-2-chemical-equilibrium.tex
+++ b/lecture-2-chemical-equilibrium.tex
@@ -977,7 +977,7 @@ reactions}:
 2 & Cl\tabularnewline
 3 & H\tabularnewline
 4 & Na\tabularnewline
-5 & Ol\tabularnewline
+5 & Z\tabularnewline
 \bottomrule
 \end{tabular}
 \par\end{center}
@@ -1112,7 +1112,7 @@ The \alert{\textbf{solubility}} is the maximum amount of a substance that can be
 	%
 	\small
 	\begin{itemize}
-		\item The \alert{\bf solubility product constant $K_{\sf sp}$} is the {\bf equilibrium constant} $K$ for a solid substances 
+		\item The \alert{\bf solubility product constant $K_{\sf sp}$} is the {\bf equilibrium constant} $K$ for \underline{a solid substances} 
 		dissolving in an aqueous solution.
 		%
 		\pause
@@ -1137,7 +1137,7 @@ The \alert{\textbf{solubility}} is the maximum amount of a substance that can be
 		%
 		{\bf Note}: \\
 		\quad $\bullet$ the reactant A is not included in the $K_{\sf sp}$  equation, because its concentrations do not change the expression
-		due to $\mathsf{[A]}$=1 \\
+		due to $\mathsf{[A(s)]}$=1 \\
 		\quad $\bullet$ water ${\sf H_2O}$ would be excluded as well.	
 	\end{itemize}
 	%
@@ -1237,20 +1237,22 @@ which is relatively small in comparison to other minerals.
 %
 \begin{frame}{Calcite solubility example, Stalagmites and stalactites}
 
+The increased solubility of calcium carbonate in rainwater saturated with carbon dioxide is the {\bf driving force behind the erosion of limestone rocks}, leading to the formation over long periods of time of caverns, caves, stalagmites and stalactites.
+
 \[\mathsf{CaCO_3(s) + CO_2(g) + H_2O(l) \rightleftharpoons Ca(HCO_3)_2(aq)}\]
 
 \vskip -10pt
 \begin{columns}[t]
-\column{0.3\textwidth}
+\column{0.4\textwidth}
 \vskip 10pt
 $\rightarrow$ Rainwater meets with limestone to form a solution of calcium bicarbonate. \\[5pt]
 $\leftarrow$ The bicarbonate-rich water drips from the ceiling of the cave and partially evaporates, leaving behind a calcium carbonate deposit.
 
-\column{0.7\textwidth}
+\column{0.6\textwidth}
 
 \begin{figure}\centering
-\includegraphics[width=0.7\textwidth]{figures/chemical-equilibrium/stalagmites-stalactities.jpg}
-\caption{\footnotesize
+\includegraphics[width=0.6\textwidth]{figures/chemical-equilibrium/stalagmites-stalactities.jpg}
+\caption*{\footnotesize
 Diagram of cave showing formation of stalagmites and stalactites.}
 \end{figure}
 
@@ -1267,8 +1269,9 @@ Diagram of cave showing formation of stalagmites and stalactites.}
 \vskip 10pt
 \begin{figure}
 \centering
-\includegraphics[width=0.65\textwidth]{figures/chemical-equilibrium/limestone-fizzing.jpg}
-\caption{Limestone fizzes when dilute acid is placed on its surface.}
+\includegraphics[width=0.6\textwidth]{figures/chemical-equilibrium/limestone-fizzing.jpg}
+\caption*{Limestone fizzes when dilute acid is placed on its surface. The calcium carbonate present in the limestone is reacting with the acid to produce carbon dioxide gas.
+}
 % When dilute acid is placed on a sample of limestone rock, it fizzes. 
 % The calcium carbonate present in the limestone is reacting with the acid to produce carbon dioxide gas.
 \end{figure}
@@ -1355,16 +1358,19 @@ Diagram of cave showing formation of stalagmites and stalactites.}
 \begin{frame}{Saturation index}
 
 The \alert{\textbf{saturation index}} indicates the saturation state of
-a solution with respect to a mineral phase, which is given by
+a solution w.r.t. a other phase (e.g., mineral or gaseous), which is given by
 %
 \[
-\boxed{ \mathrm{SI} = \log_{10} \frac{Q}{K_{\sf sp}}},
+\boxed{ \mathsf{SI
+= \log_{10} \frac{Q}{K_{\sf sp}} 
+= \log_{10} \frac{IAP}{K_{\sf sp}}
+= \log_{10} \frac{\prod_i [A_i]}{K_{\sf sp}}}},
 \] 
 where 
 \begin{itemize}
-\item $Q$ is the \emph{ion activation product (IAP) / reaction quotient} of activities of the dissolved species (characteristic of non-equilibrium solution), 
+\item Q is the \emph{ion activation product (IAP) / reaction quotient} of activities of the dissolved species (characteristic of non-equilibrium solution), 
 and 
-\item $K_{\sf sp}$ is the \emph{solubility product / equilibrium constant}. 
+\item $\mathsf{K}_{\sf sp}$ is the \emph{solubility product / equilibrium constant}. 
 \end{itemize}
 %
 \[
@@ -1602,12 +1608,104 @@ where
 \includegraphics[width=0.9\columnwidth]{figures/chemical-equilibrium/ph-scale.png}
 \end{figure}
 \end{frame}
+
+\begin{frame}{Examples with negative pH}
+
+%$\bullet$ pH can be defined and measured below zero. \\
+$\bullet$ The \alert{\bf waters of such low pH exist in nature} with the following sources of extreme acidity: \\
+\quad - {\bf magmatic gases} %that contribute HCl, HF, and
+%$\mathsf{H_2SO_4}$ to 
+in vents, fumaroles, crater lakes, and hot springs in active geothermal areas \\
+\quad - the {\bf oxidation of pyrite} which produces sulfuric acid. \\ 
+
+\begin{columns}[t]
+\column{0.3\textwidth}
+\begin{figure}
+\centering
+\includegraphics[width=0.9\columnwidth]{figures/chemical-equilibrium/ebeko.png}
+\caption*{The $\mathsf{HCl-H_2SO_4}$ hot springs 
+near Ebeko volcano with {\bf pH as low as -1.7}.}
+\end{figure}
+\column{0.3\textwidth}
+\begin{figure}
+\centering
+\includegraphics[width=0.9\columnwidth]{figures/chemical-equilibrium/kilauea.png}
+\caption*{The HCl-HF fumarolic condensates from Kilauea Iki with {\bf pH = -0.3}.}
+\end{figure}
+\column{0.3\textwidth}
+\centering
+\begin{figure}
+\includegraphics[width=0.9\columnwidth]{figures/chemical-equilibrium/poas.png}
+\caption*{The lake waters from Poas crater, Costa Rica with {\bf pH of -0.89}.}
+\end{figure}
+\end{columns}
+
+% \footnotesize
+% \begin{columns}[t]\column{0.7\textwidth}
+% \vskip 10pt
+% The most acidic pH values reported for environmental
+% samples: 
+% \begin{itemize}
+% \item the $\mathsf{HCl-H_2SO_4}$ hot springs
+% near Ebeko volcano with estimated {\bf pH as low as -1.7}
+% %
+% \pause
+% \vskip 10pt
+% \pause 
+% \item the HCl-HF fumarolic condensates from Kilauea Iki estimated to have a pH = -0.3
+% %
+% \pause
+% \vskip 10pt
+% \pause 
+% \item the lake waters from Poas crater, Costa Rica with an estimated pH of -0.89.
+% \end{itemize}
+% %
+% \column{0.3\textwidth}
+% \vskip -10pt
+% \begin{figure}
+% \centering
+% \includegraphics[width=0.6\columnwidth]{figures/chemical-equilibrium/ebeko.png}
+% %\caption{}
+% \end{figure}
+% \vskip -10pt
+% \begin{figure}
+% \centering
+% \includegraphics[width=0.6\columnwidth]{figures/chemical-equilibrium/kilauea.png}
+% %\caption{}
+% \end{figure}
+% \vskip -10pt
+% \begin{figure}
+% \centering
+% \includegraphics[width=0.6\columnwidth]{figures/chemical-equilibrium/poas.png}
+% %\caption{}
+% \end{figure}
+
+% \end{columns}
+
+\end{frame}
 %
 % --------------------------------------------------------------------------------------------------------------------%
 % Saturation index, Example
 % --------------------------------------------------------------------------------------------------------------------%
 %
-\begin{frame}{pH, Exercise}
+\begin{frame}{pH, Quiz \: i}
+
+\alert{\bf Quiz}: which of the following properties indicates a low pH of hot springs near the Ebeko volcano in the Pacific Ocean?
+%
+\vskip 10pt
+\begin{center}
+	\href{http://etc.ch/bv5y}{\textcolor{indigo(dye)}{\tt http://etc.ch/bv5y}} 
+	\quad
+	or 
+	\quad
+	\includegraphics[height=0.2\columnwidth]{figures/chemical-equilibrium/poll.png}
+\end{center}
+\vskip 10pt
+\hiddenpause
+{\bf Answer}: it has high concentrations of $\mathsf{H^+}$ ions.
+\end{frame}
+
+\begin{frame}{pH, Quiz \: ii}
 	\small
 	\begin{itemize}
 		\item We have completely dissolved HCl in the 300 ml of water  
@@ -1658,7 +1756,7 @@ where
 	\lcol
 	\vskip -5pt
 	\begin{itemize}
-		\item Too high or too low pH effect aquatic / fish life. 
+		\item Too high or too low pH effect aquatic / fish life (see explanation of \href{https://www.sciencelearn.org.nz/videos/1961-ph}{\textcolor{indigo(dye)}{\it Dr E. Ryan, Waikato Regional Council}}). 
 		\pause
 		\item 
 	Large \alert{\textbf{algae blooms}} can affect the pH as they photosynthesise: 
